nav flicker fix

--- a/components/Headers/Mobile.module.css
+++ b/components/Headers/Mobile.module.css
@@ -5,8 +5,14 @@
   top: 0;
   color: white;
   width: 100%;
-  z-index: 99;
+  z-index: 999;
+  background: rgb(0,13,36);
+    background: -moz-linear-gradient(180deg, rgba(0,13,36,1) 0%, rgba(0,13,36,0) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(0,13,36,1) 0%, rgba(0,13,36,0) 100%);
+    background: linear-gradient(180deg, rgba(0,13,36,1) 0%, rgba(0,13,36,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000d24",endColorstr="#000d24",GradientType=1);
   pointer-events: auto;
+  padding: 30px 20px;
 }
 
 .navbar {
@@ -14,7 +20,6 @@
   display: flex;
   flex-direction: row;
   justify-content: top;
-  padding: 20px;
 }
 
 .nav__wrapper.nav__bg {
